atualização do design do home

--- a/src/css/perfil.css
+++ b/src/css/perfil.css
@@ -51,8 +51,8 @@ body {
   align-items: center;
 }
 
- .home-icon {
-     width: 40px;
+ .logo-IC {
+    
      /* tamanho do ícone */
      height: 40px;
      cursor: pointer;
