--- a/src/css/home.css
+++ b/src/css/home.css
@@ -16,7 +16,7 @@ header {
   gap: 20px;
 
   /* Estilo do header (fundo branco, borda) */
-  background: #ffffff;
+  background: #304b8a;
   border-bottom: 1px solid #e5e7eb; /* Borda cinza clara */
   padding: 10px 20px;
   height: 64px; /* Altura fixa */
