--- a/src/css/pedidos_pendentes.css
+++ b/src/css/pedidos_pendentes.css
@@ -1,6 +1,6 @@
 /* === ESTILO GERAL === */
 body {
-  margin: 0;
+  margin: 20px;
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
   color: #222;
