--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -430,9 +430,11 @@ header {
   height: 100%;
   opacity: 0;
   transition: opacity 0.7s ease-in-out;
+  pointer-events: none;
 }
 .carousel-slide.active {
   opacity: 1;
+  pointer-events: auto;
 }
 .carousel-slide img {
   width: 100%;
