[Modificado] ordem de exibição do feed e notificações (agr por ordem de modificação) e estilo do menu de notificação

--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -322,7 +322,7 @@ header #searchBar:focus {
 }
 
 .notification-item.read {
-  opacity: 0.7;
+  /* opacity removido para manter notificações lidas visíveis */
 }
 
 .notification-icon {
