[Modificação] contador e status da noticia no feed

--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -877,6 +877,9 @@ header {
 .fechada {
   background: red;
 }
+.em-breve {
+  background: #ff9100;
+}
 .timer {
   font-size: 0.85rem;
   font-weight: bold;
